# risansym

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docs.yml  publish.yml
core/: README.md  pyproject.toml
core/src/risansym/: __init__.py  event.py  model.py  process.py  schemas.py  simulation.py  simulator.py  topology.py  trace.py
core/src/risansym/engine/: __init__.py  builder.py  exporter.py  loop.py
core/tests/: conftest.py  test_api.py  test_engine.py  test_event.py  test_model.py  test_phase3.py  test_process.py  test_schemas.py  test_simulation.py  test_simulator.py  test_topology.py  test_trace.py
docs/: architecture.md  index.md
docs/api/: event.md  model.md  process.md  schemas.md  simulation.md
docs/tutorial/: getting_started.md  using_visualizer.md  writing_algorithms.md
site/: 404.html  index.html  objects.inv
site/api/event/: index.html
site/api/model/: index.html
site/api/process/: index.html
site/api/schemas/: index.html
site/api/simulation/: index.html
site/architecture/: index.html
site/search/: search_index.json
site/tutorial/getting_started/: index.html
site/tutorial/using_visualizer/: index.html
site/tutorial/writing_algorithms/: index.html
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
web/src/components/: ErrorBoundary.module.css  ErrorBoundary.test.tsx  ErrorBoundary.tsx  PlaybackControls.module.css  PlaybackControls.test.tsx  PlaybackControls.tsx  Uploader.module.css  Uploader.test.tsx  Uploader.tsx  Visualizer.module.css  Visualizer.tsx
web/src/components/visualizer/: EventDetailsPanel.module.css  EventDetailsPanel.tsx  EventDots.tsx  LifelineLayer.tsx  MessageArrows.tsx  Playhead.tsx  TimeAxis.tsx  Visualizer.module.css  Visualizer.tsx  constants.ts
web/src/components/visualizer/hooks/: useEventGroups.test.ts  useEventGroups.ts  useMessageArrows.test.ts  useMessageArrows.ts  useNodePositions.test.ts  useNodePositions.ts
web/src/lib/: PlaybackContext.tsx  SimulationContext.tsx  TraceContext.tsx  exportUtils.ts  schema.ts
