[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risansym"
version = "0.8.0"
description = "A powerful, Python-based discrete event simulator for distributed systems."
readme = "README.md"
authors = [
    { name = "Diego Peralta Huerta", email = "PeraltaHD4K@users.noreply.github.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/PeraltaHD4K/risansym"
Repository = "https://github.com/PeraltaHD4K/risansym.git"

[tool.hatch.build.targets.wheel]
packages = ["src/risansym"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.4.0",
    "mypy>=1.10.0"
]
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["^tests/"]
